Fix issue where Library Catalog text would collapse on itself if window width was minimized significantly
Changed all Library Catalog html objects from p tags to div tags - removed 'line-spacing: 0%' property from book-catalog styling

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,10 @@ body {
     grid-template-columns: 4fr minmax(200px, 1fr);
 }
 
-.header,
+.header {
+    align-self: center;
+}
+
 .body {
     display: grid;
 }
@@ -43,18 +46,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1;
 }
 
 .title {
     font-size: 65px;
     gap: 1.5rem;
     padding: 2rem;
+    height: 120px;
 }
 
 .book-catalog {
     flex-direction: column;
-    line-height: 0%;
 }
 
 .catalog-item {
